flex/engines/graph_db/grin/include/include/property/row.h

void grin_destroy_row(GRIN_GRAPH, GRIN_ROW);
int grin_get_int32_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
unsigned int grin_get_uint32_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
long long int grin_get_int64_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
unsigned long long int grin_get_uint64_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
float grin_get_float_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
double grin_get_double_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
const char* grin_get_string_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
int grin_get_date32_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
int grin_get_time32_from_row(GRIN_GRAPH, GRIN_ROW, size_t);
long long int grin_get_timestamp64_from_row(GRIN_GRAPH, GRIN_ROW, size_t);