flex/engines/graph_db/grin/include/rust/grin.rs


    #[doc = " @brief Get the value of int32, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype time32.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n Note that the returned string should be explicitly freed by the user,\n by calling API ``grin_destroy_string_value``.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_time32(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> i32;

    #[doc = " @brief Get the value of int64, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype timestamp64.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n Note that the returned string should be explicitly freed by the user,\n by calling API ``grin_destroy_string_value``.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_timestamp64(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> i64;

    #[doc = " @brief Get the vertex type that a given vertex property belongs to.\n @param GrinGraph The graph\n @param GrinVertexProperty The vertex property\n @return The vertex type"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_type_from_property(
        arg1: GrinGraph,
        arg2: GrinVertexProperty,
    ) -> GrinVertexType;

    #[cfg(all(feature = "grin_with_vertex_property", feature = "grin_trait_const_value_ptr"))]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> *const ::std::os::raw::c_void;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_equal_edge_property(
        arg1: GrinGraph,
        arg2: GrinEdgeProperty,
        arg3: GrinEdgeProperty,
    ) -> bool;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_destroy_edge_property(arg1: GrinGraph, arg2: GrinEdgeProperty);

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_datatype(
        arg1: GrinGraph,
        arg2: GrinEdgeProperty,
    ) -> GrinDatatype;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_int32(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> i32;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_uint32(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> u32;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_int64(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> i64;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_uint64(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> u64;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_float(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> f32;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_double(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> f64;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_string(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> *const ::std::os::raw::c_char;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_date32(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> i32;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_time32(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> i32;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_value_of_timestamp64(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> i64;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_type_from_property(
        arg1: GrinGraph,
        arg2: GrinEdgeProperty,
    ) -> GrinEdgeType;

    #[cfg(all(feature = "grin_with_edge_property", feature = "grin_trait_const_value_ptr"))]
    #[allow(unused)]
    pub fn grin_get_edge_property_value(
        arg1: GrinGraph,
        arg2: GrinEdge,
        arg3: GrinEdgeProperty,
    ) -> *const ::std::os::raw::c_void;

    #[doc = " @brief Get the vertex property list of the graph.\n This API is only available for property graph.\n @param GrinGraph The graph.\n @return The vertex property list."]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_list_by_type(
        arg1: GrinGraph,
        arg2: GrinVertexType,
    ) -> GrinVertexPropertyList;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_list_size(
        arg1: GrinGraph,
        arg2: GrinVertexPropertyList,
    ) -> usize;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_from_list(
        arg1: GrinGraph,
        arg2: GrinVertexPropertyList,
        arg3: usize,
    ) -> GrinVertexProperty;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_create_vertex_property_list(arg1: GrinGraph) -> GrinVertexPropertyList;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_destroy_vertex_property_list(arg1: GrinGraph, arg2: GrinVertexPropertyList);

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_insert_vertex_property_to_list(
        arg1: GrinGraph,
        arg2: GrinVertexPropertyList,
        arg3: GrinVertexProperty,
    ) -> bool;

    #[doc = " @brief Get the vertex property handle by id.\n This API is enabled by ``GRIN_TRAIT_NATURAL_ID_FOR_VERTEX_PROPERTY``,\n meaning that the storage has naturally increasing ids for vertex properties\n under a certain vertex type.\n @param GrinGraph The graph.\n @param GrinVertexType The vertex type.\n @param GrinVertexPropertyId The vertex property id.\n @return The vertex property handle."]
    #[cfg(feature = "grin_trait_natural_id_for_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_by_id(
        arg1: GrinGraph,
        arg2: GrinVertexType,
        arg3: GrinVertexPropertyId,
    ) -> GrinVertexProperty;

    #[doc = " @brief Get the vertex property's natural id.\n This API is enabled by ``GRIN_TRAIT_NATURAL_ID_FOR_VERTEX_PROPERTY``,\n meaning that the storage has naturally increasing ids for vertex properties\n under a certain vertex type.\n @param GrinGraph The graph.\n @param GrinVertexType The vertex type.\n @param GrinVertexProperty The vertex property handle.\n @return The vertex property id."]
    #[cfg(feature = "grin_trait_natural_id_for_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_id(
        arg1: GrinGraph,
        arg2: GrinVertexType,
        arg3: GrinVertexProperty,
    ) -> GrinVertexPropertyId;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_list_by_type(
        arg1: GrinGraph,
        arg2: GrinEdgeType,
    ) -> GrinEdgePropertyList;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_list_size(
        arg1: GrinGraph,
        arg2: GrinEdgePropertyList,
    ) -> usize;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_from_list(
        arg1: GrinGraph,
        arg2: GrinEdgePropertyList,
        arg3: usize,
    ) -> GrinEdgeProperty;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_create_edge_property_list(arg1: GrinGraph) -> GrinEdgePropertyList;

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_destroy_edge_property_list(arg1: GrinGraph, arg2: GrinEdgePropertyList);

    #[cfg(feature = "grin_with_edge_property")]
    #[allow(unused)]
    pub fn grin_insert_edge_property_to_list(
        arg1: GrinGraph,
        arg2: GrinEdgePropertyList,
        arg3: GrinEdgeProperty,
    ) -> bool;

    #[cfg(feature = "grin_trait_natural_id_for_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_by_id(
        arg1: GrinGraph,
        arg2: GrinEdgeType,
        arg3: GrinEdgePropertyId,
    ) -> GrinEdgeProperty;

    #[doc = " We must specify the edge type here, because the edge property id is unique only under a specific edge type"]
    #[cfg(feature = "grin_trait_natural_id_for_edge_property")]
    #[allow(unused)]
    pub fn grin_get_edge_property_id(
        arg1: GrinGraph,
        arg2: GrinEdgeType,
        arg3: GrinEdgeProperty,
    ) -> GrinEdgePropertyId;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_destroy_row(arg1: GrinGraph, arg2: GrinRow);

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_int32_from_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: usize,
    ) -> i32;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_uint32_from_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: usize,
    ) -> u32;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_int64_from_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: usize,
    ) -> i64;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_uint64_from_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: usize,
    ) -> u64;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_float_from_row(arg1: GrinGraph, arg2: GrinRow, arg3: usize) -> f32;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_double_from_row(arg1: GrinGraph, arg2: GrinRow, arg3: usize) -> f64;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_string_from_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: usize,
    ) -> *const ::std::os::raw::c_char;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_date32_from_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: usize,
    ) -> i32;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_time32_from_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: usize,
    ) -> i32;

    #[cfg(feature = "grin_enable_row")]
    #[allow(unused)]
    pub fn grin_get_timestamp64_from_row(
        arg1: GrinGraph,
        arg2: GrinRow,
        arg3: usize,
    ) -> i64;
